[package]
name = "cw-module-size"
version = "1.0.0"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2021"
description = "VM bindings to run verify cosmos contracts."
repository = "https://github.com/CosmWasm/cw-tools.git"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm = "0.7.2"
cosmwasm-vm = "1.0.0"
clap = "2.33.3"
loupe = "0.1.3"
wasmer = { version = "2.2.1", default-features = false, features = ["cranelift", "universal", "singlepass"] }
