[package]
name = "cw-multi-threaded-cache"
version = "1.0.0"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2021"
description = "VM bindings to run verify cosmos contracts."
repository = "https://github.com/CosmWasm/cw-tools.git"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm = "0.7.2"
cosmwasm-vm = "1.0.0"
tempfile = "3.1.0"
cosmwasm-std = { version = "1.0.0", default-features = false }
